--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/pracownicy?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=coderslab
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=system
 spring.datasource.password=barca
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+#spring.security.user.name=user
+#spring.security.user.password=pass
+
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+
 spring.file.encoding=UTF-8
